--- a/parrotbot/src/main/res/layout/activity_start.xml
+++ b/parrotbot/src/main/res/layout/activity_start.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/parrotbot_background">
+    android:background="@color/ebony_clay"
+    tools:context=".start.StartActivity">
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/main_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="com.parrotbot.chat.ui.ChatFragment"/>
 
 </FrameLayout>
