Buisness logic and little UI fixes

--- a/chat/src/main/res/layout/item_user_message.xml
+++ b/chat/src/main/res/layout/item_user_message.xml
@@ -9,19 +9,19 @@
     <TextView
         android:id="@+id/message"
         style="@style/Text.14"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/chat_parrot_name_margin_horizontal_far"
         android:layout_marginEnd="@dimen/chat_parrot_name_margin_horizontal_close"
         android:background="@drawable/bg_user_message"
         android:elevation="@dimen/elevation_8"
         android:padding="@dimen/item_message_padding"
+        app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_default="wrap"
         app:layout_constraintWidth_max="wrap"
         app:layout_constraintWidth_percent="0.7"
         tools:text="Hey, today is a great day!!!" />
