--- a/chat/src/main/res/layout/fragment_chat.xml
+++ b/chat/src/main/res/layout/fragment_chat.xml
@@ -27,7 +27,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:reverseLayout="true"
+        app:stackFromEnd="true"
         tools:itemCount="5"
         tools:listitem="@layout/item_user_message" />
 
