--- a/chat/src/main/res/drawable/bg_parrotbot_message.xml
+++ b/chat/src/main/res/drawable/bg_parrotbot_message.xml
@@ -3,8 +3,5 @@
     android:shape="rectangle">
 
     <solid android:color="@color/chat_parrotbot_message_background" />
-    <corners
-        android:bottomRightRadius="@dimen/radius_12"
-        android:topLeftRadius="@dimen/radius_12"
-        android:topRightRadius="@dimen/radius_12" />
+    <corners android:radius="@dimen/radius_12"/>
 </shape>
