--- a/chat/src/main/res/layout/item_user_message.xml
+++ b/chat/src/main/res/layout/item_user_message.xml
@@ -6,13 +6,31 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/tail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_tail"
+        android:tint="@color/sandy_brown"
+        android:elevation="@dimen/elevation_8"
+        app:layout_constraintStart_toStartOf="@id/tail_space"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <Space
+        android:id="@+id/tail_space"
+        android:layout_width="@dimen/item_tail_space_width"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@id/message"
+        app:layout_constraintEnd_toEndOf="@id/message"/>
+
     <TextView
         android:id="@+id/message"
         style="@style/Text.16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/chat_parrot_name_margin_horizontal_far"
-        android:layout_marginEnd="@dimen/chat_parrot_name_margin_horizontal_close"
+        android:layout_marginStart="@dimen/item_message_margin_horizontal_far"
+        android:layout_marginEnd="@dimen/item_message_margin_horizontal_close"
         android:background="@drawable/bg_user_message"
         android:elevation="@dimen/elevation_8"
         android:padding="@dimen/item_message_padding"
