--- a/chat/src/main/res/values/colors.xml
+++ b/chat/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="chat_background">@color/athens_gray</color>
     <color name="chat_message_box_background">@color/athens_gray</color>
-    <color name="chat_parrotbot_message_background">@color/athens_gray</color>
+    <color name="chat_parrotbot_message_background">@color/white</color>
 </resources>
